#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999943 released.

        * Roll back some changes in Makefile.PL.

        * Changes in Makefile.PL for Unix builds.


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999942 released.

        * Roll back some changes in Makefile.PL.
 
        * Test earlier for compiler in Unix builds.


2013-11-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999941 released.

        * require and import Digest::MD5 in Makefile.PL.


2013-11-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999940 released.

        * Fix require to use line 604 in Makefile.PL.


2013-11-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999939 released.

        * More Development on Import/Export Menu Item.

        * New version of Term::Menus paired with this release.


2013-11-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999938 released.

        * More Development on Import/Export Menu Item.

        * More modules load early to fix unix installs.


2013-11-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999937 released.

        * Fix for --users arg


2013-11-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999936 released.

        * More Development on Import/Export Menu Item.

        * Added --users arg to display list of FullAuto users.


2013-11-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999935 released.
