@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 ac41fea0819ece9a9e0c50de4ed1bad648c65920 ChangeLog
+SHA1 1885f39a23eefbe2fd9bfa41c954a1a408ddff59 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 8bd74cab55b34d989e7feb69e95044785f7ebdeb META.yml
-SHA1 82810ea4793e64b9179b177e21b4c2dc6e68cc9a MYMETA.json
-SHA1 d3b97911df863d7db45412ff0f71339996de453a MYMETA.yml
-SHA1 ed7c84857245a5a9343f39112b39b01cfd5995f3 Makefile.PL
+SHA1 0a61dfb3d120c5cb6d4e2368356a119717410116 META.yml
+SHA1 376abe557047035d322b83efeef5cee804164d9b MYMETA.json
+SHA1 37ad7e4077667b1efe6c6baf019a8909090020a6 MYMETA.yml
+SHA1 ff06d60a19e66b920b67b31a9ff7c302d1262ce3 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 ffaf8363352022f7a968ced7257147d1a48a042f lib/Net/FullAuto.pm
+SHA1 7715d94d19f9b5fcd676e334a51ef6f9d66e3a26 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,11 +56,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSl7TqAAoJEBa/9Pad787EzHEIANXRyTC4eyjV+70q0Oub99sB
-Q+RvI+c/u6QkrhkedPrGM3X3/blbdH4szKEkO79qiPW85HNio+QJfOdmiMHqSzjS
-6AVsWMc8t18JkNq814o12Ph5fXLleACpsZh0Xg7Vh0VoMLTvGsScgCT2RSBfxUeC
-wYK1BJ/HfQRfriG7Zc7NI5897muBvtfhrMLvfKMVJXSXgkywt0DOT1Sri2tS9pPX
-1j43Fmnc3RtKgcpp+bOjX2JbbWjnT3TKBX/XqhnpohS2oiUt7OebRFA0ta+x717u
-1xAcGpxnrPN7/VNvVQfI07rJEYEAQ5kgbexU3typzPJUqAGMugqFAUOnc8ir9s4=
-=YdZR
+iQEcBAEBAgAGBQJSl+M1AAoJEBa/9Pad787EOcIIAJ0SrYJvHUQN/5y+VfU1nqdA
+HK0c+cNwyHwmOyI9bo5jKYpbPZUx2f5ndFcVjlHUI418B856pdXsfWaEAVmrfFkf
+8r9Gf8YDkmVPJrMBIIN4Efmcj28lEvADi2s/R5OUAc3Aeb9a/6eH35EA9W+mWjQW
+Wuey3I/ArelJinKauYMubGZij09jJV1qfMvp2I+50PzU8H+HP5wFnmgM6tcUr0n8
+t2MZtQ7c+2xrDpD3H+ZwEbJ4jF0AALWx4VdX/UvsEl8NrEuTQCeQbGiC2Xf8kvPF
+EUCLmIgC+rETARK3A9rtGZPjgvzD204LFdb8Bor8k09aqOQVrTBPt2ccvkDXp+A=
+=RbXk
 -----END PGP SIGNATURE-----
