@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999943';
+our $VERSION='0.99999944';
 
 
 use 5.005;
